tests/NormalTests/paczka2/big_fuzzy/95357962.err
Error in line 1: zS2oaJs A915 55,6
Error in line 3: zS2oaJs A1b8 3b9,b
Error in line 2: zS2oaJs A158 85,8
Error in line 17: YCBKf7 A158 83,7
Error in line 20: c7nyykv4 S659 60,1
Error in line 16: A915 S659 338,7
Error in line 30: YCBKf7 S659 3,4
Error in line 46: zS2oaJs A915 12,6
Error in line 52: YCBKf7 S404 27,23
Error in line 45: c7nyykv4 A915 68,0
Error in line 44: kcNi5 S404 32,3
Error in line 53: c7nyykv4 A158 11,8
Error in line 63: A915 S659 64,2
Error in line 60: kcNi5 S659 25,0
Error in line 72: zS2oaJs A915 16,0
Error in line 74: kcNi5 S404 61,1
Error in line 93: mAsFXhx A915 4.,7
Error in line 95: mAsFXhx S404 85,01
Error in line 96: A91S S6S9 32,2
Error in line 100: A915 S659 112,01
Error in line 102: kcNi5 A158 34,2
Error in line 107: mAsFXhx S404 245,1
Error in line 90: c7nyykv4 A915 295,3
Error in line 103: kcNi5 A915 77,4
Error in line 101: zS2oaJs A915 24,6
Error in line 120: YCBKf7 A158 -1,9
Error in line 115: YCBKf7 A158 2,8
Error in line 122: YCBKf7 S404 60,3
Error in line 127: YCBKf7 S659 61,3
Error in line 125: mAsFXhx S404 72,3
Error in line 129: JhyhyXBrc A915 71,3
Error in line 134: YCBKf7 S404 13,5
Error in line 136: YCBKf7 S659 69,3
Error in line 137: A915 A915 96,3
Error in line 152: kcNi5 A915 57,!
Error in line 146: kcNi5 A158 84,7
Error in line 156: c7nyykv4 S659 23,8
Error in line 160: YCBKf7 A915 77,8
Error in line 153: kcNi5 A915 166,5
Error in line 168: zS2oaJs A158 86,39
Error in line 162: YCBKf7 A158 63,7
Error in line 186: mAsFXhx S659 45,4
Error in line 169: zS2oaJs A158 230,3
Error in line 177: YCBKf7 S659 57,0
Error in line 191: JhyhyXBrc S659 8,1
Error in line 203: mAsFXhx A158 12,1
Error in line 211: JhyhyXBrc S659 8,9
Error in line 216: c7nyykv4 S659 12,0
Error in line 227: YCBKf7 A158 1,2
Error in line 241: mAsFXhx Ao15 82,7
Error in line 239: c7nyykv4 A915 14,7
Error in line 231: kcNi5 S404 273,5
